# MPM

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_actions.cpp  mainwindow_mqtt.cpp  mainwindow_tray.cpp  mainwindow_windows.cpp
src/actions/: actiondialog.cpp  actiondialog.h  actions.cpp  actions.h
src/assets/: assets.qrc
src/common/: crypto_win.cpp  crypto_win.h  ipc_auth.cpp  ipc_auth.h  logging.cpp  logging.h  service_ipc_client.cpp  service_ipc_client.h  settings.cpp  settings.h
src/service/: ipc_server.cpp  ipc_server.h  main_service.cpp  mqtt_daemon.cpp  mqtt_daemon.h  win_service.cpp  win_service.h
src/ui/: mainwindow.ui
